# XProject

./: .gitignore
Game/trunk/: .gitignore  CMakeLists.txt
Game/trunk/Libs/Win64/Debug/: LibLogger.lib
Game/trunk/Project/: XProject.sln
Game/trunk/Project/GateServer/: GateServer.vcxproj  GateServer.vcxproj.filters
Game/trunk/Project/GlobalServer/: GlobalServer.vcxproj  GlobalServer.vcxproj.filters
Game/trunk/Project/LogServer/: LogServer.vcxproj  LogServer.vcxproj.filters
Game/trunk/Project/LogicServer/: LogicServer.vcxproj  LogicServer.vcxproj.filters
Game/trunk/Project/RobotClient/: RobotClient.vcxproj  RobotClient.vcxproj.filters
Game/trunk/Project/RouterServer/: RouterServer.vcxproj  RouterServer.vcxproj.filters
Game/trunk/Project/ScriptServer/: ScriptServer.cpp  ScriptServer.vcxproj  ScriptServer.vcxproj.filters
Game/trunk/Project/Test/: Test.vcxproj  Test.vcxproj.filters
Game/trunk/Readme/: 数据库操作指令.txt
Game/trunk/Src/: CMakeLists.txt
Game/trunk/Src/Common/: Platform.h  PlatformHeader.h
Game/trunk/Src/Common/CSVDocument/: CSVDocument.cpp  CSVDocument.h  CSVSerializer.hpp  Variant.hpp
Game/trunk/Src/Common/DataStruct/: Array.h  CircleQueue.h  Encoding.h  HList.h  List.h  Md5.h  MemPool.h  Memory.h  MinHeap.h  MutexLock.h  ObjID.h  Point.h  PureList.h  RWLock.h  Ranking.h  Regexp.h  Sync.h  Thread.h  TimeMonitor.h  XString.cpp  XThread.h  XTime.h
Game/trunk/Src/Common/Filter/: Filter.cpp
Game/trunk/Src/Common/HttpRequest/: HttpRequest.cpp  HttpRequest.h
Game/trunk/Src/Common/LuaCommon/: ClientLuaCmd.cpp  LuaCmd.h  LuaPB.h  LuaRpc.cpp  LuaTableSeri.cpp  LuaTableSeri.h
Game/trunk/Src/Common/PacketParser/: PacketReader.cpp  PacketReader.h  PacketWriter.cpp
Game/trunk/Src/Common/TimerMgr/: Timer.cpp  Timer.h  TimerMgr.cpp  TimerMgr.h
Game/trunk/Src/Include/Curl/: Curl.hpp
Game/trunk/Src/RobotClient/: CMakeLists.txt  Main.cpp  Robot.cpp  Robot.h  RobotMgr.cpp  RobotMgr.h  StartRobot.sh
Game/trunk/Src/ScriptMgr/: Dirent.cpp  Dirent.h  Main.cpp
Game/trunk/Src/Server/: CMakeLists.txt
Game/trunk/Src/Test/: CMakeLists.txt  Main.cpp
Game/trunk/Src/ToLua/: MysqlDriver.tolua
Game/trunk/Tools/: CSV2Lua.bat  DelDebug.bat  ToLua.bat  XML2Lua.bat
Libary/trunk/: CMakeLists.txt  Copy2Project.bat  Copy2Project.sh
Libary/trunk/Project/: Libary.sln  UpgradeLog.htm
Libary/trunk/Project/LibDBDriver/: LibDBDriver.vcxproj  LibDBDriver.vcxproj.filters
Libary/trunk/Project/LibLogger/: LibLogger.cpp  LibLogger.vcxproj  LibLogger.vcxproj.filters  ReadMe.txt  stdafx.cpp
Libary/trunk/Project/LibNetwork/: LibNetwork.vcxproj  LibNetwork.vcxproj.filters
Libary/trunk/Project/LibPbc/: pbc.vcxproj  pbc.vcxproj.filters
Libary/trunk/Project/Lua530/: Lua530.vcxproj  Lua530.vcxproj.filters
Libary/trunk/Project/LuaWrapper/: LuaWrapper.vcxproj  LuaWrapper.vcxproj.filters
Libary/trunk/Project/lpeg/: lpeg.vcxproj  lpeg.vcxproj.filters
Libary/trunk/Project/lua_cjson/: lua_cjson.vcxproj  lua_cjson.vcxproj.filters
Libary/trunk/Source/: CMakeLists.txt
Libary/trunk/Source/LibDBDriver/: CMakeLists.txt
Libary/trunk/Source/LibLogger/: CMakeLists.txt  Logger.cpp
Libary/trunk/Source/LibNetwork/: Base64.cpp  CMakeLists.txt  Ctrl.h  ExterNet.cpp  ExterNet.h  INet.cpp  IO.cpp  IO.h  InnerNet.cpp  InnerNet.h  MsgList.h  Net.cpp  Net.h  NetDef.h  Session.h  Sha1.cpp  Sha1.h  WebSocket.cpp  WebSocket.h
Libary/trunk/Source/LuaWrapper/: CMakeLists.txt  LuaDebugger.cpp  LuaLeakCheck.cpp  LuaWrapper.cpp
RPGGame/trunk/: .gitignore  CMakeLists.txt  关闭.bat  协议.bat  启动.bat  导表.bat  提交.bat  更新.bat
RPGGame/trunk/Data/Config/: M1导表.xlsx  战斗属性.txt  配置说明.txt
RPGGame/trunk/Data/Document/: GM.txt  _panda8001-13000.xls  _戴连春13001-18000.xls  _蒲谭军18001-23000.xls  panda.xls  协议文档.xls  自定义协议.xls
RPGGame/trunk/Data/Protobuf/: ClientPBList.php  Knapsack.proto  LoadPBCProto.lua  MakePB.bat  ServerPBList.php  achievements.proto  actlc.proto  actld.proto  actxy.proto  actyy.proto  actzeroyuan.proto  appellation.proto  artifact.proto  baotu.proto  battle.proto  broadcast.proto  chengzhidiqiu.proto  chongbang.proto  chuxun.proto  dayrecharge.proto  diandeng.proto  drawspirit.proto  exchange.proto  fabao.proto  formation.proto  friend.proto  fund.proto  global.proto  growthtargetact.proto  guoku.proto  guoshiguan.proto  huakui.proto  junjichu.proto  keju.proto  keyexchange.proto  leichong.proto  leideng.proto  lifanyuan.proto  login.proto  mail.proto  (+35 more)
RPGGame/trunk/Data/ServerMap/: 1.csv  1_zudang.csv  4001.csv
RPGGame/trunk/Project/: RPGXProject.sln  XProject.sln
RPGGame/trunk/Project/GateServer/: GateServer.vcxproj  GateServer.vcxproj.filters
RPGGame/trunk/Project/GlobalServer/: GlobalServer.vcxproj  GlobalServer.vcxproj.filters
RPGGame/trunk/Project/LogServer/: LogServer.vcxproj  LogServer.vcxproj.filters
RPGGame/trunk/Project/LogicServer/: LogicServer.vcxproj  LogicServer.vcxproj.filters
RPGGame/trunk/Project/LoginServer/: LoginServer.vcxproj  LoginServer.vcxproj.filters
RPGGame/trunk/Project/RobotClient/: RobotClient.vcxproj  RobotClient.vcxproj.filters
RPGGame/trunk/Project/RouterServer/: RouterServer.vcxproj  RouterServer.vcxproj.filters
RPGGame/trunk/Project/ScriptServer/: ScriptServer.cpp  ScriptServer.vcxproj  ScriptServer.vcxproj.filters
RPGGame/trunk/Project/Test/: Test.vcxproj  Test.vcxproj.filters
RPGGame/trunk/Project/WGlobalServer/: WGlobalServer.vcxproj  WGlobalServer.vcxproj.filters
RPGGame/trunk/Project/WorldServer/: LogicServer.vcxproj  LogicServer.vcxproj.filters
RPGGame/trunk/Readme/: 协议文档.xls  日志说明.txt
RPGGame/trunk/Src/: CMakeLists.txt
RPGGame/trunk/Src/Common/: CDebug.h  Debug.h  Platform.h  PlatformHeader.h
RPGGame/trunk/Src/RobotClient/: CMakeLists.txt  Main.cpp  MsgPack.cpp  MsgPack.h  Robot.cpp  Robot.h  RobotMgr.cpp  RobotMgr.h  TestServer.cpp
RPGGame/trunk/Src/ScriptMgr/: Dirent.cpp  Main.cpp
RPGGame/trunk/Src/Server/: CMakeLists.txt
RPGGame/trunk/Src/Test/: CMakeLists.txt  Main.cpp
RPGGame/trunk/Src/ToLua/: MysqlDriver.tolua
RPGGame/trunk/Tools/: CSV2Lua.bat  DelDebug.bat  ToLua.bat  XML2Lua.bat
(+2554 files in other folders)
